// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Today component Should render component with right classes for passed props 1`] = `
<div
  className="today today--task-info is-checked is-dimmed"
  onClick={[Function]}
>
  <svg
    className="today__svg"
    viewBox="0 0 26 26"
  >
    <circle
      className="today__beams"
      cx="13"
      cy="13"
      fill="none"
      r="13"
    />
    <circle
      className="today__beams--active"
      cx="13"
      cy="13"
      fill="none"
      r="13"
    />
  </svg>
</div>
`;

exports[`Today component Should render component with right classes for passed props 2`] = `
<div
  className="today today--tasks-list is-disabled"
  onClick={[Function]}
>
  <svg
    className="today__svg"
    viewBox="0 0 26 26"
  >
    <circle
      className="today__beams"
      cx="13"
      cy="13"
      fill="none"
      r="13"
    />
    <circle
      className="today__beams--active"
      cx="13"
      cy="13"
      fill="none"
      r="13"
    />
  </svg>
</div>
`;

exports[`Today component Should render component with right default classes 1`] = `
<div
  className="today today--default"
  onClick={[Function]}
>
  <svg
    className="today__svg"
    viewBox="0 0 26 26"
  >
    <circle
      className="today__beams"
      cx="13"
      cy="13"
      fill="none"
      r="13"
    />
    <circle
      className="today__beams--active"
      cx="13"
      cy="13"
      fill="none"
      r="13"
    />
  </svg>
</div>
`;
